tests/should_fail/sf018_unclosed_string.hs
-- Should fail: unclosed string literal
module Sf018UnclosedString where

s :: String
s = "hello world
